Added proper setting of the app's title.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <link rel="icon" href="assets/images/favicon.png">
 
-  <title>{{ title }} - Leeds University Skydivers</title>
+  <title>Leeds University Skydivers</title>
   <base href="/">
 
   <link href="css/application.css" rel="stylesheet">
