Made form inputs Open Sans to improve readibility.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -34,7 +34,7 @@
   </style>
 
   <link href="css/application.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC|Open+Sans" rel="stylesheet" type="text/css">
 
   {{#each scripts.polyfills}}
   <script src="{{.}}"></script>
