--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,7 +7,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="assets/images/favicon.png">
+  <link rel="icon" href="/assets/images/favicon.png">
 
   <title>Leeds University Skydivers</title>
   <base href="/">
