Added a brief intro for crawlers.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -15,6 +15,8 @@
 
 <body role="document">
   <app-root>
+    <p>The Leeds University Skydiving Society is part of the outdoor societies at the Leeds University Union. We welcome members from all Leeds and surrounding universities, including alumni.</p>
+
     <p style="text-align: center; font-size: 2em;">Loading, please wait.</p>
   </app-root>
 
