Various fixes & cleanups.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body role="document">
-  <app-root>
+  <lsd-root>
     <p>The Leeds University Skydiving Society is part of the outdoor societies at the Leeds University Union. We welcome members from all Leeds and surrounding universities, including alumni.</p>
 
     <p style="text-align: center; font-size: 2em;">Loading, please wait.</p>
-  </app-root>
+  </lsd-root>
 
   <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC|Open+Sans|Leckerli+One" rel="stylesheet" type="text/css" async>
 </body>
