--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,12 +14,30 @@
 </head>
 
 <body role="document">
-  <lsd-root>
-    <p>The Leeds University Skydiving Society is part of the outdoor societies at the Leeds University Union. We welcome members from all Leeds and surrounding universities, including alumni.</p>
+<script>
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    <p style="text-align: center; font-size: 2em;">Loading, please wait.</p>
-  </lsd-root>
+  ga('create', 'UA-94120369-1', 'none');
+</script>
 
-  <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC|Open+Sans|Leckerli+One" rel="stylesheet" type="text/css" async>
+<lsd-root>
+  <p>The Leeds University Skydiving Society is part of the outdoor societies at the Leeds University Union. We welcome
+    members from all Leeds and surrounding universities, including alumni.</p>
+
+  <p style="text-align: center; font-size: 2em;">Loading, please wait.</p>
+</lsd-root>
+
+<link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC|Open+Sans|Leckerli+One" rel="stylesheet"
+      type="text/css" async>
 </body>
 </html>
