--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -27,7 +27,7 @@
     m.parentNode.insertBefore(a, m)
   })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-94120369-1', 'none');
+  ga('create', 'UA-94120369-1', 'auto');
 </script>
 
 <lsd-root>
