--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -37,7 +37,7 @@
   <p style="text-align: center; font-size: 2em;">Loading, please wait.</p>
 </lsd-root>
 
-<link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC|Open+Sans|Leckerli+One" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC|Bree+Serif" rel="stylesheet"
       type="text/css" async>
 </body>
 </html>
