Added member's not approved component.
* Also changed font to Roboto Serif.

* Updated Angular to Angular 4.1.0.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -37,7 +37,7 @@
   <p style="text-align: center; font-size: 2em;">Loading, please wait.</p>
 </lsd-root>
 
-<link href="https://fonts.googleapis.com/css?family=Leckerli+One|Bree+Serif" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css?family=Leckerli+One|Roboto+Slab" rel="stylesheet"
       type="text/css" async>
 </body>
 </html>
