--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -39,5 +39,6 @@
 
 <link href="https://fonts.googleapis.com/css?family=Leckerli+One|Roboto+Slab" rel="stylesheet"
       type="text/css" async>
+<script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
 </body>
 </html>
