--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,10 +4,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
+
+  <meta name="description" content="The Leeds University Skydiving Society is part of the outdoor societies at the
+    Leeds University Union. We welcomemembers from all Leeds and surrounding universities, including alumni.">
+  <meta name="author" content="Leeds Uni Skydivers">
   <link rel="icon" href="/assets/images/favicon.png">
+  <link rel="manifest" href="/assets/manifest.json">
+  <meta name="theme-color" content="#c40205">
 
   <title>Leeds University Skydivers</title>
   <base href="/">
@@ -31,9 +34,6 @@
 </script>
 
 <lsd-root>
-  <p>The Leeds University Skydiving Society is part of the outdoor societies at the Leeds University Union. We welcome
-    members from all Leeds and surrounding universities, including alumni.</p>
-
   <p style="text-align: center; font-size: 2em;">Loading, please wait.</p>
 </lsd-root>
 
