Added defer attribute to Google web fonts.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -38,6 +38,6 @@
 </lsd-root>
 
 <link href="https://fonts.googleapis.com/css?family=Leckerli+One|Roboto+Slab" rel="stylesheet"
-      type="text/css" async>
+      type="text/css" async defer>
 </body>
 </html>
